hphp/test/zend/good/tests/classes/private_004b.php.expectf
Call show()

Fatal error: Call to private method pass::show() from context 'fail' in %s/private_004b.php on line 15
